force-app/main/default/objects/vlocity_ps__Note__c/vlocity_ps__Note__c.object-meta.xml
<CustomObject>
    <label>Case Note</label>
    <nameField>
        <label>Case Note / Case Notes</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>