force-app/main/default/objects/vlocity_ps__Note__c/fields/vlocity_ps__ContactId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ContactId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the Contact related to this note</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Case Notes</relationshipLabel>
    <relationshipName>Case_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>