force-app/main/default/objects/vlocity_ps__Note__c/fields/vlocity_ps__Date__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Date__c</fullName>
    <description>Date of when the note was entered.</description>
    <label>Case Note Date</label>
    <type>Date</type>
</CustomField>