force-app/main/default/objects/vlocity_ps__Note__c/fields/vlocity_ps__IsPrivate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__IsPrivate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the note is private (true) or not (false)</description>
    <label>Private</label>
    <type>Checkbox</type>
</CustomField>