force-app/main/default/objects/vlocity_ps__Note__c/fields/vlocity_ps__Location__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Location__c</fullName>
    <label>Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>