force-app/main/default/objects/vlocity_ps__Note__c/fields/vlocity_ps__Name__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Name__c</fullName>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>