force-app/main/default/objects/vlocity_ps__Note__c/fields/vlocity_ps__NoteText__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__NoteText__c</fullName>
    <description>Body of the note.</description>
    <label>Note Text</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>