force-app/main/default/objects/vlocity_ps__Note__c/fields/vlocity_ps__PrivacyLevel__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__PrivacyLevel__c</fullName>
    <description>Privacy level of the note such as &quot;Owner Only&quot; or &quot;Case Team.&quot;</description>
    <label>Privacy Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Owner Only</fullName>
            </value>
            <value>
                <fullName>Owner and Client</fullName>
            </value>
            <value>
                <fullName>Case Team</fullName>
            </value>
            <value>
                <fullName>Program Staff</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>