force-app/main/default/objects/vlocity_ps__Note__c/fields/vlocity_ps__ProgramEnrollmentId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ProgramEnrollmentId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identifies the Program Enrollment related to this note.</description>
    <label>Program Enrollment</label>
    <referenceTo>vlocity_ps__ProgramEnrollment__c</referenceTo>
    <relationshipLabel>Case Notes</relationshipLabel>
    <relationshipName>Case_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>