force-app/main/default/objects/vlocity_ps__Note__c/fields/vlocity_ps__PSCaseId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__PSCaseId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identifies the Benefit Case related to this note.</description>
    <label>Benefit Case</label>
    <referenceTo>vlocity_ps__Case__c</referenceTo>
    <relationshipLabel>Case Notes</relationshipLabel>
    <relationshipName>Case_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>