force-app/main/default/objects/vlocity_ps__Note__c/fields/vlocity_ps__ServicePlanId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ServicePlanId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identifies the Service Plan related to this note.</description>
    <label>Service Plan</label>
    <referenceTo>vlocity_ps__BenefitCaseServicePlan__c</referenceTo>
    <relationshipLabel>Case Notes</relationshipLabel>
    <relationshipName>Case_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>