force-app/main/default/objects/vlocity_ps__Note__c/fields/vlocity_ps__SubType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__SubType__c</fullName>
    <description>Description: Subtype category of the note.</description>
    <label>SubType</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In-Person Visit</fullName>
            </value>
            <value>
                <fullName>Phone Call</fullName>
            </value>
            <value>
                <fullName>Initial Contact with Alleged Victim</fullName>
            </value>
            <value>
                <fullName>Initial Contact with Alleged Perpetrator</fullName>
            </value>
            <value>
                <fullName>Contact with Alleged Victim</fullName>
            </value>
            <value>
                <fullName>Contact with Alleged Perpetrator</fullName>
            </value>
            <value>
                <fullName>Contact with Household Members</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>