force-app/main/default/objects/vlocity_ps__Note__c/fields/vlocity_ps__Type__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Type__c</fullName>
    <description>Type category of the note.</description>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scheduled Meeting</fullName>
            </value>
            <value>
                <fullName>Outreach</fullName>
            </value>
            <value>
                <fullName>Drop-In</fullName>
            </value>
            <value>
                <fullName>(Forsenic) Interview</fullName>
            </value>
            <value>
                <fullName>(Initial Responder) Interview</fullName>
            </value>
            <value>
                <fullName>Home Visit</fullName>
            </value>
            <value>
                <fullName>Foster Home Visit</fullName>
            </value>
            <value>
                <fullName>Family Team Meeting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>